# grove

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/grove/: Cargo.toml
crates/grove-macros/: Cargo.toml
crates/grove-macros/src/: commands.rs  event.rs  handlers.rs  lib.rs  service.rs  service_attr.rs
crates/grove/examples/: events.rs  hello_world.rs  metrics.rs
crates/grove/src/: cancellation.rs  lib.rs  metrics.rs  spawner.rs
demos/egui-counter/: Cargo.toml
demos/egui-counter/src/: counter.rs  main.rs  status.rs
demos/tui-immediate/: Cargo.toml
demos/tui-immediate/src/: logs.rs  main.rs
demos/tui-retained/: Cargo.toml
demos/tui-retained/src/: counter.rs  main.rs
examples/egui-app/: Cargo.toml
examples/egui-app/src/: counter.rs
examples/egui-counter/: Cargo.toml
