[package]
name = "grove"
version.workspace = true
edition.workspace = true
description = "A macro-based actor framework for Rust"

[dependencies]
grove-macros = { path = "../grove-macros" }

# Runtime dependencies for generated code
smol = "2"
futures-lite = "2"
async-io = "2"
async-channel = "2"
async-broadcast = "0.7"
futures = "0.3"
